--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.magnum.videoup.client.LoginScreenActivity"
+            android:name="org.jcruells.sm.client.LoginScreenActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.magnum.videoup.client.VideoListActivity"
+            android:name="org.jcruells.sm.client.VideoListActivity"
             android:label="@string/title_activity_video_list" >
         </activity>
     </application>
