--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.magnum.videoup.client"
+    package="org.jcruells.sm.client"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,19 +14,27 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="org.jcruells.sm.client.App">"
         <activity
             android:name="org.jcruells.sm.client.LoginScreenActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="org.jcruells.sm.client.VideoListActivity"
             android:label="@string/title_activity_video_list" >
+        </activity>
+        <activity
+            android:name="org.jcruells.sm.client.PatientsListActivity"
+            android:label="@string/title_activity_patients_list" >
+        </activity>
+        <activity
+            android:name="org.jcruells.sm.client.CheckinsListActivity"
+            android:label="@string/title_activity_checkins_list" >
         </activity>
     </application>
 
